# mcp-diagram-agent

./: .env.example  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  security.yml
src/: __init__.py  diagram_generator.py  models.py  server.py  utils.py
tests/: __init__.py  conftest.py  test_comprehensive.py  test_diagram_generator.py  test_server.py
