[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-diagram-agent"
version = "0.1.0"
description = "MCP server that converts natural language system descriptions into Excalidraw diagrams using Claude AI"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "shaikn6" }]
requires-python = ">=3.11"
keywords = ["mcp", "claude", "excalidraw", "diagram", "ai", "anthropic", "fastapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic>=0.40.0",
    "mcp>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-setuptools",
]

[project.scripts]
mcp-diagram-agent = "src.server:main"
mcp-diagram-agent-mcp = "src.server:run_mcp_server"

[project.urls]
Homepage = "https://github.com/shaikn6/mcp-diagram-agent"
Repository = "https://github.com/shaikn6/mcp-diagram-agent"
Issues = "https://github.com/shaikn6/mcp-diagram-agent/issues"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=80",
    "-v",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "S",   # bandit (security)
    "ANN", # flake8-annotations (partial)
    "RUF", # ruff-specific
]
ignore = [
    "ANN101",  # missing type annotation for self
    "ANN102",  # missing type annotation for cls
    "S101",    # use of assert (needed in tests)
    "ANN401",  # Any is fine for Excalidraw dicts
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "S", "N"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
files = ["src"]
exclude = ["tests/"]

[[tool.mypy.overrides]]
module = ["mcp.*", "uvicorn.*"]
ignore_missing_imports = true
